--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
    ========================================================================== */
 
 html {
-    color: #222;
+    color: #353839;
     font-size: 1em;
     line-height: 1.4;
 }
@@ -96,38 +96,43 @@ textarea {
    ========================================================================== */
 
 html {
-  background-color: #fff;
+  background-color: #e8e0cf;
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Rasa', serif;
   padding: 0 2em;
   font-size: 1.25em;
   height: 100%;
-  color: #fff;
+  color: 353839;
 }
 
 header,
 footer {
-  background-color: #222;
+  font-family: 'Rasa', serif;
   height: 80px;
   width: 100%;
 }
 
 main {
-  background-color: #ccc;
+  font-family: 'Rasa', serif;
   height: 250px;
   width: 100%;
+  border-bottom: 2px solid #353839;
 }
 
 header,
 footer,
 main {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+}
+
+footer {
+    border-top: 2px solid #353839;
 }
 
 .flex-container {
@@ -138,17 +143,23 @@ main {
     justify-content: space-between;
 }
 
+.flex-container img {
+    height: 25px;
+    width: 25px;
+}
+
 .flex-items {
-  color: #fff;
+  color: #353839;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.4em;
   width: 30%;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Rasa', serif;
 }
+
 
 /* ==========================================================================
    Helper classes
@@ -234,12 +245,29 @@ main {
 @media (min-width: 1200px) {
   #div-1,
   #div-2{
+    flex: 30%;
+    border-right: 2px solid #575858;
+    margin: 10px 0;
+    padding-left: 10px;
       /* set your flex value to 1 50% */
   }
 
   #div-3 {
+    flex: 30%;
+    padding-left: 10px;
     /* set your flex value to 1 100% */
   }
+}
+
+@media (max-width: 768px) {
+    #div-1,
+    #div-2{
+    flex: 50%;
+    }
+
+    #div-3 {
+        flex: 100%;
+    }
 }
 
 @media print,
